--- a/app/views/admin/movies/_movie.html.erb
+++ b/app/views/admin/movies/_movie.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%= @stt %></td><% @stt += 1 %>
   <td><%= link_to movie.title, admin_movie_path(id: movie.id)%>
-  <td><%= movie.name %></td>
+  <td><%= @categories %></td>
   <td><%= movie.duration_min %></td>
   <td><%= l(movie.release_time, format: :default) %></td>
   <td><%= movie.age_range %></td>
