--- a/app/views/admin/movies/show.html.erb
+++ b/app/views/admin/movies/show.html.erb
@@ -7,7 +7,7 @@
           <div class="row">
             <div class="col-md-4 col-sm-4 col-xs-8 col-xs-offset-2 col-md-offset-0">
               <div class="detail-feat-img">
-                <%= image_tag @movie.img_link, class: "loading" %>
+                <%= image_tag(@movie.display_image) if @movie.image.attached? %>
               </div>
             </div>
             <div class="details col-md-8 col-sm-8 col-xs-12">
@@ -50,7 +50,7 @@
                 </div>
                 <div class="detail-info-row">
                   <label><%= t ".category" %>:&nbsp;</label>
-                  <span class="detail-info-right"><%= @movie.name %></span>
+                  <span class="detail-info-right"><%= @categories.join(", ") %></span>
                 </div>
                 <div class="detail-info-row">
                   <label><%= t ".release_time" %>:&nbsp;</label>
