--- a/app/views/admin/shared/_movie_edit_form.html.erb
+++ b/app/views/admin/shared/_movie_edit_form.html.erb
@@ -1,78 +1,81 @@
 <div class="container">
   <h1><%= t ".edit" %></h1>
-  <br>
-  <table>
-  <%= form_for(@movie, class: "movie-form", url: admin_movie_path) do |f| %>
+  <hr>
+  <%= form_for(@movie, url: admin_movie_path) do |f| %>
+    <%= render "admin/shared/error_message", object: f.object %>
     <div class="form-group row">
       <label class="col-sm-2 col-form-label"><%= t ".title" %></label>
       <div class="col-sm-10">
-        <%= f.text_field :title, size: "50x1" %>
+        <%= f.text_field :title, class: "form-control" %>
       </div>
     </div>
 
     <div class="form-group row">
       <label class="col-sm-2 col-form-label"><%= t ".description" %></label>
       <div class="col-sm-10">
-        <%= f.text_area :description, size: "70x4" %>
+        <%= f.text_area :description, class: "form-control" %>
       </div>
     </div>
 
     <div class="form-group row">
       <label class="col-sm-2 col-form-label"><%= t ".duration" %></label>
       <div class="col-sm-10">
-        <%= f.number_field :duration_min, size: "20x1" %>
+        <%= f.number_field :duration_min, class: "form-control" %>
       </div>
     </div>
 
     <div class="form-group row">
       <label class="col-sm-2 col-form-label"><%= t ".release" %></label>
       <div class="col-sm-10">
-        <%= f.date_field :release_time %>
+        <%= f.date_field :release_time, class: "form-control" %>
       </div>
     </div>
 
     <div class="form-group row">
       <label class="col-sm-2 col-form-label"><%= t ".language" %></label>
       <div class="col-sm-10">
-        <%= f.text_field :language, size: "20x1" %>
+        <%= f.text_field :language, size: "20x1", class: "form-control" %>
       </div>
     </div>
 
     <div class="form-group row">
       <label class="col-sm-2 col-form-label"><%= t ".director" %></label>
       <div class="col-sm-10">
-        <%= f.text_field :director, size: "50x2" %>
+        <%= f.text_field :director, size: "50x2", class: "form-control" %>
       </div>
     </div>
 
     <div class="form-group row">
       <label class="col-sm-2 col-form-label"><%= t ".cast" %></label>
       <div class="col-sm-10">
-        <%= f.text_field :cast, size: "50x2" %>
+        <%= f.text_field :cast, size: "50x2", class: "form-control" %>
       </div>
     </div>
 
     <div class="form-group row">
       <label class="col-sm-2 col-form-label"><%= t ".range" %></label>
       <div class="col-sm-10">
-        <%= f.text_field :age_range, size: "20x1" %>
+        <%= f.text_field :age_range, size: "20x1", class: "form-control" %>
       </div>
     </div>
 
     <div class="form-group row">
       <label class="col-sm-2 col-form-label"><%= t ".link" %></label>
-      <div class="col-sm-10">
-        <%= f.url_field :img_link, size: "50x2" %>
+      <div class="col-sm-10 image">
+        <%= f.file_field :image, accept: "image/jpeg,image/gif,image/png" %>
       </div>
     </div>
     
     <div class="form-group row">
       <label class="col-sm-2 col-form-label"><%= t ".category" %></label>
       <div class="col-sm-10">
-        <%= f.select :category_id, Category.pluck(:name, :id), class:"custom-select my-1 mr-sm-2" %>
+        <%= f.select :category_ids, Category.pluck(:name, :id),{}, {class: "form-control select2-form", multiple: "multiple"} %>
       </div>
     </div>
     <br>
-    <%= f.submit t(".submit"), class: "btn btn-primary" %>
+    <div class="text-center">
+      <%= f.submit t(".submit"), class: "btn btn-primary" %>
+    </div>
+    <br><br>
   <% end %>
 </div>
