--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -15,10 +15,8 @@
       <%= render "layouts/admin/sidebar" %>
       <div id="content">
         <%= render "layouts/admin/header" %>
-        <% flash.each do |message_type, message| %>
-          <div class="alert alert-<%= message_type %>"><%= message %></div>
-        <% end %>
         <%= yield %>
+        <%= toastr_flash.html_safe %>
       </div>
     </div>
   </body>
